...
        mainAxisSize: MainAxisSize.min,
        spacing: 20,
        children: [
          // Title
          Center(
            child: Text(
              "Sign in to cometchat",
              style: TextStyle(
                color: colorPalette.textPrimary,
                fontSize: typography.heading2?.bold?.fontSize,
                fontFamily: typography.heading2?.bold?.fontFamily,
                fontWeight: typography.heading2?.bold?.fontWeight,
              ),
...
                  strokeWidth: 2,
                  valueColor: AlwaysStoppedAnimation<Color>(
                      colorPalette.white ?? Colors.white),
                ),
              )
            : Text(
                "Continue",
                style: TextStyle(
                  color: colorPalette.buttonIconColor,
                  fontSize: typography.button?.medium?.fontSize,
                  fontFamily: typography.button?.medium?.fontFamily,
                  fontWeight: typography.button?.medium?.fontWeight,
                ),
...
