...
                      ),
                    ),
                  );
                },
              ),
              ModuleCard(
                title: "Users",
                leading: Image.asset(
                  'assets/icons/conversations.png',
                  height: 40,
                  width: 40,
                  color: colorPalette.textPrimary,
                ),
...
