...
                              strokeWidth: 2,
                              valueColor: AlwaysStoppedAnimation<Color>(
                                  _colorPalette.white ?? Colors.white),
                            ),
                          )
                        : Text(
                            'Continue',
                            style: TextStyle(
                              color: _colorPalette.buttonIconColor,
                              fontSize: _typography.button?.medium?.fontSize,
                              fontFamily:
                                  _typography.button?.medium?.fontFamily,
                              fontWeight:
...
