...
    final Color iconColor =
        widget.auxiliaryButtonIconColor ??
        colorPalette.iconSecondary ??
        Colors.grey;

    return Semantics(
      label: 'Record voice message',
      button: true,
      child: Container(
        height: 24,
        width: 24,
        margin: needsLeftMargin ? const EdgeInsets.only(left: 12) : null,
        child: IconButton(
...
